# elastic_search_with_rust

./: Cargo.toml  README.md
src/: elastic.rs  main.rs
