[package]
name = "elastic_search_with_rust"
version = "0.1.0"
authors = ["Abhinav Yadav <abhinavy14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3"
serde_json = "~1"
elasticsearch = "7.10.0-alpha.1"
env_logger = "0.9.0"
dotenv = "0.15.0"
